fixed spacing on table elements and added an icon

--- a/client/main.css
+++ b/client/main.css
@@ -179,3 +179,7 @@
 .grade {
   font-size: .5em;
 }
+
+th{
+  padding: 8px;
+}
